--- a/index.html
+++ b/index.html
@@ -451,7 +451,8 @@ OX1 3RH
           <br> MNRAS, 521, 4190
           </p>
 
-          <p><b><a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.523..646T/abstract">Studying the link between radio galaxies and AGN fuelling with relativistic hydrodynamic simulations of flickering jets
+          <p><b><a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.523..646T/abstract">
+            Testing AGN outflow and accretion models with C IV and He II emission line demographics in z ≈ 2 quasars
           </a></b>
           <small>2023</small><br>
           Temple, M. J., <b>Matthews, J. H.</b>, Hewett, P. C. et al.
