--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ OX1 3RH
                     col-md-3
                     col-lg-2">
           <p>
-            <img src="/img/uhecr_map.png"
+            <img src="/img/uhecr_map.jpeg"
                  class="img-responsive img-thumbnail"
                  style="width:100%">
           </p>
@@ -287,7 +287,7 @@ OX1 3RH
           <p>
             <b>
               
-                <a href="/img/uhecr_map.png">
+                <a href="/img/uhecr_map.jpeg">
                   Cosmic Ray Acceleration
                 </a>
               
