--- a/dphil.html
+++ b/dphil.html
@@ -85,12 +85,16 @@ It is threatened by habitat loss.
         <div class="lead">
           <p style="font-size:18px"> 
             I'm delighted to be offering two DPhil projects in the University of Oxford 
-            Astrophysics sub-department for a 2023 start. 
+            Astrophysics sub-department for a 2024 start. 
             The project descriptions can be found on the 
-            <a href="https://www.physics.ox.ac.uk/study/postgraduates/dphil-atmospheric-oceanic-and-planetary-physics/planetary-and-exoplanetary-0-5">
-              Oxford Astro webpage.
+            <a href="https://www.physics.ox.ac.uk/study/postgraduates/dphil-astrophysics">
+              Oxford Astro webpage under Galaxies and High-Energy Astrophysics.
             </a>
-            The projects I'm offering are on "Particle Acceleration in Astrophysical Jets" and "The origins of the highest energy particles in nature".  
+            The main project I'm offering is "Studying the accretion-outflow connection in Active Galactic Nuclei with large observational surveys", 
+            with Professor Matt Jarvis as a co-supervisor. I'm also second supervisor
+            on a project with Professor Rob Fender called "Scaling black hole accretion and jet formation from stellar-mass to supermassive black holes". 
+            The first project is more observational and will use multi-wavelength survey data to test models for accretion and outflow physics in AGN. The second 
+            project has a greater emphasis on numerical techniques although will still require careful consideration of observational constraints. 
             <br><br>
             Lower down on this page I've simply posted a few links to talks I've given or 
             reading material that might provide useful context on the two projects and give 
@@ -101,8 +105,7 @@ It is threatened by habitat loss.
             watch some movies of hydrodynamic simulations of AGN jets.</a>. 
             <br><br>
             If you have questions about the projects, please don't hesitate to 
-            <a href="mailto:james.matthews@physics.ox.ac.uk">email me.</a> I'd also 
-            be happy to provide more information 
+            <a href="mailto:james.matthews@physics.ox.ac.uk">email me.</a> 
           </p><p>
         </div>
         
