--- a/dphil.html
+++ b/dphil.html
@@ -158,16 +158,20 @@ OX1 3RH
         of powerful AGN jets including a study of the particle acceleration that goes on in 
         the shocks produced by the jet and resulting backflow.
         <br><br>
+        <a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.523..646T/abstract">
+          Temple, Matthews et al. 2023.
+        </a> Testing accretion and outflow models with quasar demographics.
+        <br><br>
+        <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.502.4154R/abstract">
+          Rankine, Matthews et al. 2021.
+        </a> An observational study of the radio and UV properties of quasars at cosmic noon. 
+        <br><br>
         <a href="https://arxiv.org/abs/2003.06587">
           Matthews et al. 2020.
         </a> A review of particle acceleration in astrophysical jets.
         <br><br>
-        <a href="https://arxiv.org/abs/2108.08879">
-          Bell \& Matthews 2022.
-        </a> The first description of the `echoes' model for ultrahigh energy cosmic ray origins.
-        <br><br>
         <a href="https://arxiv.org/abs/2003.06137">
-          Hardcastle \& Croston 2020.
+          Hardcastle & Croston 2020.
         </a> A review paper about radio galaxies. 
         <br><br>
         
