--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ It is threatened by habitat loss.
             Some (fairly) recent highlights can be found below, together with a list of current projects, publications and talks. 
             If you have any questions, please get in touch. You can also read my <a href="https://zenodo.org/record/1256805">PhD thesis</a>
             or <a href="docs/cv.pdf">CV.</a>
+             <br><br>
+            I'm delighted to be offering <a href="https://jhmatthews.github.io/dphil">DPhil Projects for a 2024 start</a>. 
           </ul>
             </p>
         </div>
