--- a/dphil.html
+++ b/dphil.html
@@ -101,7 +101,7 @@ It is threatened by habitat loss.
             you a feel for the kind of work we would be doing together.
             <br><br>
             Alternatively you can read about my research in general <a href="https://jhmatthews.github.io/">on my homepage</a>,
-            or <a href="https://jhmatthews.github.io/uhecr_movies">
+            or <a href="https://jhmatthews.github.io/uhecr-movies">
             watch some movies of hydrodynamic simulations of AGN jets.</a>. 
             <br><br>
             If you have questions about the projects, please don't hesitate to 
