--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@ It is threatened by habitat loss.
           </h2>
         </div>
         <div class="col-xs-3 col-lg-3">
-          <img src="img/rs_portrait.png" 
+          <a href="https://jhmatthews.github.io/">
+            <img src="img/rs_portrait.png" 
                class="img-circle"
                style="margin-top:-6px;width:100px;border:2px solid rgba(255,255,255,0.75)">
+          </a>
         </div>
       </div>
     </div>
