--- a/dphil.html
+++ b/dphil.html
@@ -100,11 +100,11 @@ It is threatened by habitat loss.
             <br><br>
             Lower down on this page I've simply posted a few links to talks I've given or 
             reading material that might provide useful context on the two projects and give 
-            you a feel for the kind of work we would be doing together.
+            you a feel for the kind of work we would be doing together. You can also <a href="https://jhmatthews.github.io/docs/DPhilPoster2024-JMatthews.pdf">view my poster</a> on the first project. 
             <br><br>
             Alternatively you can read about my research in general <a href="https://jhmatthews.github.io/">on my homepage</a>,
             or <a href="https://jhmatthews.github.io/uhecr-movies">
-            watch some movies of hydrodynamic simulations of AGN jets.</a>. 
+            watch some movies of hydrodynamic simulations of AGN jets.</a> 
             <br><br>
             If you have questions about the projects, please don't hesitate to 
             <a href="mailto:james.matthews@physics.ox.ac.uk">email me.</a> 
