--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ It is threatened by habitat loss.
           and exotic physics that can be probed using accreting black holes and the outflows they produce. 
             <br><br>
           In particular, my work focuses on the origins 
-          of the highest energy cosmic rays, the physics of accretion disc winds, the disc-wind-jet connection in AGN and the hydrodynamics of astrophysical jets. 
+          of the highest energy cosmic rays, the physics of accretion disc winds, the disc-wind-jet connection in AGN and X-ray binaries, and the hydrodynamics of astrophysical jets on all scales. 
           More recently, I have started using X-ray observations of cluster-hosted AGN to search for, and place limits on, axion-like particles, 
           which are exotic dark matter candidates. 
             
@@ -100,7 +100,6 @@ It is threatened by habitat loss.
             If you have any questions, please get in touch. You can also read my <a href="https://zenodo.org/record/1256805">PhD thesis</a>
             or <a href="docs/cv.pdf">CV.</a>
              <br><br>
-            I'm delighted to be offering <a href="https://jhmatthews.github.io/dphil">DPhil Projects for a 2024 start</a>. 
           </ul>
             </p>
         </div>
@@ -145,6 +144,19 @@ OX1 3RH
     <div class="row"><div class="col-md-9">
       <h3>A Few Highlights</h3>
      </div></div>
+
+        <div class="row">
+      <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2">
+      <p><img src="https://sirocco-rt.readthedocs.io/en/latest/_images/logo.png" class="img-responsive img-thumbnail" style="width:100%"></p>
+      </div>
+      <div class="col-xs-12 col-sm-9 col-md-6 col-lg-7">
+       <p>
+        <b><a href="https://github.com/sirocco-rt/sirocco">SIROCCO code release</a></b>
+       </p>
+       <p>The public release of the <a href="https://github.com/sirocco-rt/sirocco">Sirocco</a> Monte Carlo radiative transfer and photoionization code, 
+         together with its <a href="https://sirocco-rt.readthedocs.io/">documentation and  <a href="https://arxiv.org/abs/2410.19908">the code release paper.</a></p>
+      </div>
+      </div>
     
      <div class="row">
      <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2">
@@ -176,10 +188,11 @@ OX1 3RH
       </div>
       <div class="col-xs-12 col-sm-9 col-md-6 col-lg-7">
        <p>
-        <b><a href="https://arxiv.org/abs/2001.03625">Stratified Disc Wind Models for the AGN broad-line region</a></b>
+        <b><a href="https://arxiv.org/abs/2001.03625">A disc wind model for quasar emission line blueshifts</a></b>
        </p>
-       <p><a href="https://arxiv.org/abs/2001.03625">A 2020 paper</a> on stratified disc wind models for the AGN broad-line region and accompanying 
-            <a href="https://github.com/jhmatthews/windy-blr-2020/">data and notebooks.</a></a></p>
+       <p><a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.526.3967M/abstract">A 2023 paper</a>, which uses SIROCCO to construct a
+            disc wind model for quasar emission line blueshifts and accompanying
+            <a href="https://github.com/jhmatthews/blueshifts">data and code.</a></a></p>
       </div>
       </div>
 
@@ -430,6 +443,21 @@ OX1 3RH
         <h3>Selected Publications</h3>
         <p>Here are some of my favourite papers. You can find a full list of publications on 
           <a href="https://ui.adsabs.harvard.edu/public-libraries/Ac1fUr0vS4m94GPP3JQT0g">ADS</a>.
+
+          <p><b><a href="https://ui.adsabs.harvard.edu/abs/2024arXiv241019908M/abstract">SIROCCO: A Publicly Available Monte Carlo Ionization and Radiative Transfer Code for Astrophysical Outflows
+          </a></b>
+          <small>2024</small><br>
+          <b>Matthews, J. H.</b>, Long, K. S., Knigge, C., et al.,
+          <br> MNRAS, submitted, arXiv:2410.19908
+          </p>
+
+
+          <p><b><a href="https://ui.adsabs.harvard.edu/abs/2024arXiv240610337H/abstract">Getting More Out of Black Hole Superradiance: a Statistically Rigorous Approach to Ultralight Boson Constraints
+          </a></b>
+          <small>2023</small><br>
+          Hoof, S, Marsh, D. J. E., Sisk-Reynes, j, <b>Matthews, J. H.</b>, Reynolds, C.
+          <br> MNRAS, submitted, arXiv:2406.10337
+          </p>
 
           <p><b><a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.523.2478W/abstract">Studying the link between radio galaxies and AGN fuelling with relativistic hydrodynamic simulations of flickering jets
           </a></b>
